--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-template-repository (1.0-1) unstable; urgency=medium
+node-es-module-lexer (1.1.0+dfsg-2) unstable; urgency=medium
 
-  * Initial release
+  * Source-only upload
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Yadd <yadd@debian.org>  Mon, 14 Nov 2022 06:11:56 +0100
+
+node-es-module-lexer (1.1.0+dfsg-1) unstable; urgency=medium
+
+  * Initial release (Closes: #1023404)
+
+ -- Yadd <yadd@debian.org>  Thu, 10 Nov 2022 08:42:30 +0100
